--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   socket_io_client: ^2.0.0
   awesome_notifications: ^0.7.4+1
   cron: ^0.5.1
+  animate_do: ^3.0.2
+  font_awesome_flutter: ^10.4.0
 
 dev_dependencies:
   flutter_test:
