--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cron: ^0.5.1
   animate_do: ^3.0.2
   font_awesome_flutter: ^10.4.0
+  flutter_spinkit: ^5.1.0
+  snippet_coder_utils: ^1.0.13
 
 dev_dependencies:
   flutter_test:
