--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   font_awesome_flutter: ^10.4.0
   http: ^0.13.5
+  numberpicker: ^2.1.1
   path_provider: ^2.0.12
   permission_handler: ^10.2.0
   provider: ^6.0.4
